# mcp-code-analyzer

./: .analysis-config.json  DISTRIBUTION.md  MANIFEST.in  PACKAGE_STATUS.md  README.md  build_package.py  demo_enhancements.py  file1.py  interactive_test.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  run_cli.py  setup.py  test_enhancements.py  test_package.py
.github/workflows/: code-analysis.yml
docs/: CI-CD.md
src/: cli.py  config.py  server.py
src/analyzers/: basic.py  circular_dependencies.py  complexity.py  dead_code.py  dependencies.py  dependency_security.py  github_analyzer.py  github_security.py  project_analyzer.py  quality.py  sast_integration.py  security.py  todo_tracker.py
src/cli/: __init__.py
src/config/: __init__.py  settings.py
src/languages/: base.py  generic.py  javascript.py  language_manager.py  python.py
src/models/: metrics.py  quality.py  security.py
src/storage/: cache.py  database.py  migrations.py
src/utils/: logger.py  visualizer.py
tests/: conftest.py
tests/test_analyzers/: test_basic.py  test_complexity.py
tests/test_integration/: test_dependencies.py  test_quality.py  test_security.py  test_visualizations.py
